[gd_scene load_steps=3 format=3 uid="uid://snjlxqbxk8mg"]

[ext_resource type="Script" path="res://scripts/menus/hud.gd" id="1_6fire"]
[ext_resource type="Theme" uid="uid://mf7q1nvgel6c" path="res://game_theme.tres" id="2_vd2sn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6fire")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 744.0
offset_top = 64.0
offset_right = 1026.0
offset_bottom = 276.0

[node name="CurrentLevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vd2sn")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Level#"

[node name="LivesLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vd2sn")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "No. Lives: "

[node name="DiamondLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vd2sn")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Diamond Coins: "

[node name="StarLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vd2sn")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Star Coins: "
